syntax = "proto3";

package graph_visualization;

option go_package = "github.com/google/gapid/gapis/resolve/dependencygraph2/graph_visualization/protobuf";

message Graph {
  repeated Node nodes = 1;
}

message Node {
  string name = 1;
  string op = 2;
  repeated string input = 3;
}
